@@ -10382,13 +10382,16 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
-          <para>Shark mode: </para>
+          <para>Shark mode:</para>
 
           <para>- support for new extended attribute
           "IS_ACTIVITY_SCOPE_ONLY"</para>
 
           <para>- category variable is now represented as Package/Workflow
           process attribute</para>
+
+          <para>- added create outlook variables action in Workflow Variables
+          table GUI</para>
         </listitem>
 
         <listitem>
