@@ -1,4 +1,7 @@
 ###### TWE 5.1-1 RELEASED ######
+2014-08-07 Sasa Bojanic <sasaboy@together.at>
+   # Shark mode: added create outlook variables action in Workflow Variables table GUI
+
 2014-08-05 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: category variable is now represented as Package/Workflow process attribute
 
